# appsec_hw1

./: CMakeLists.txt  Makefile  giftcard.h  gpg_working_test.md  test_blessednv.md
.github/workflows/: ci.yml
